Add Properties file and a Config class. Move text processing to InvertedIndex as we need to store the complete text. Implement batch saving.

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,3 +1,8 @@
-DROP_TABLES_IN_STARTUP=FALSE
-SAVE_INDEX_TO_FILE=TRUE
-SAVE_AFTER=2
+DROP_TABLES_IN_STARTUP=TRUE
+SAVE_INDEX_TO_DATABASE=TRUE
+EXECUTE_BATCH_AFTER=35000
+BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
+TEST_CSV_PATH=src/main/resources/test.csv
+NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
+INVERTED_INDEX=src/main/resources/inverted_index.txt
+DB_URL=jdbc:sqlite:information_retrieval.db
