add keyword extractor and repository to retrieve key words for each member/political party by year, then keep the highest

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,5 +1,6 @@
-DROP_AND_RECREATE_TABLES=true
-EXECUTE_BATCH_AFTER=70000
+DROP_AND_RECREATE_TABLES=false
+EXECUTE_BATCH_AFTER=100000
+EXTRACT_KEY_WORDS=true
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
 TEST_CSV_PATH=src/main/resources/test.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
