implement key word extraction for political parties. Map the relation member - political party appropriately

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,7 @@
 DROP_AND_RECREATE_TABLES=false
-EXECUTE_BATCH_AFTER=100000
+EXECUTE_BATCH_AFTER=40
 EXTRACT_KEY_WORDS=true
-NUMBER_OF_KEY_WORDS =2
+NUMBER_OF_KEY_WORDS= 2
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
 TEST_CSV_PATH=src/main/resources/test.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
