--- a/src/config.properties
+++ b/src/config.properties
@@ -1,11 +1,11 @@
 DROP_AND_RECREATE_TABLES=false
-EXECUTE_BATCH_AFTER=40
+EXECUTE_BATCH_AFTER=125000
 EXTRACT_KEY_WORDS=false
 NUMBER_OF_KEY_WORDS= 2
 TOP_K=3
 SIMILARITY_BATCH=720
-FIND_SIMILARITIES_IN_BATCHES=TRUE
-FIND_SIMILARITIES=TRUE
+FIND_SIMILARITIES_IN_BATCHES=false
+FIND_SIMILARITIES=false
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
 TEST_CSV_PATH=src/main/resources/test.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
