Cleanup, write similarities to file, move FileManager, add more configs

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,12 +1,16 @@
-DROP_AND_RECREATE_TABLES=false
+DROP_AND_RECREATE_TABLES=FALSE
 EXECUTE_BATCH_AFTER=125000
-EXTRACT_KEY_WORDS=false
+SEARCH: false
+SEARCH_TOP_K=20
+EXTRACT_KEY_WORDS=FALSE
+EXTRACT_MEMBER_KEY_WORDS=TRUE
+EXTRACT_POLITICAL_PARTY_KEY_WORDS=TRUE
+EXTRACT_SPEECH_KEY_WORDS=1
 NUMBER_OF_KEY_WORDS= 2
-TOP_K=3
-SIMILARITY_BATCH=720
+FIND_SIMILARITIES=TRUE
 FIND_SIMILARITIES_IN_BATCHES=false
-FIND_SIMILARITIES=false
+SIMILARITY_BATCH=720
+TOP_K_SIMILARITIES=3
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
-TEST_CSV_PATH=src/main/resources/test.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
 DB_URL=jdbc:sqlite:information_retrieval.db
