Add batch manager, commit all inserts in one go

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,16 +1,17 @@
-DROP_AND_RECREATE_TABLES=FALSE
+DROP_AND_RECREATE_TABLES=TRUE
 EXECUTE_BATCH_AFTER=125000
 SEARCH: false
 SEARCH_TOP_K=20
 EXTRACT_KEY_WORDS=FALSE
-EXTRACT_MEMBER_KEY_WORDS=TRUE
+EXTRACT_MEMBER_KEY_WORDS=false
 EXTRACT_POLITICAL_PARTY_KEY_WORDS=TRUE
 EXTRACT_SPEECH_KEY_WORDS=1
 NUMBER_OF_KEY_WORDS= 2
-FIND_SIMILARITIES=TRUE
+FIND_SIMILARITIES=false
 FIND_SIMILARITIES_IN_BATCHES=false
 SIMILARITY_BATCH=720
 TOP_K_SIMILARITIES=3
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
+CSV_TO_READ=biG
 DB_URL=jdbc:sqlite:information_retrieval.db
