Add KMeans, create Directory enum,remove multiple methods from FileManager, use one create and one delete Directory, Create CosineSimilarity.java and use it in Calculator and Kmean, add properties for Kmean, move condition checking for exctracting keywords, in the Extractor. do the same for Calculator as well.

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,17 +1,27 @@
-DROP_AND_RECREATE_TABLES=TRUE
+DROP_AND_RECREATE_TABLES=false
 EXECUTE_BATCH_AFTER=125000
-SEARCH: false
+
+SEARCH=false
 SEARCH_TOP_K=20
-EXTRACT_KEY_WORDS=FALSE
+
+EXTRACT_KEY_WORDS=true
 EXTRACT_MEMBER_KEY_WORDS=false
-EXTRACT_POLITICAL_PARTY_KEY_WORDS=TRUE
-EXTRACT_SPEECH_KEY_WORDS=1
-NUMBER_OF_KEY_WORDS= 2
+EXTRACT_POLITICAL_PARTY_KEY_WORDS=false
+EXTRACT_SPEECH_KEY_WORDS=true
+
+NUMBER_OF_KEY_WORDS= 3
 FIND_SIMILARITIES=false
 FIND_SIMILARITIES_IN_BATCHES=false
 SIMILARITY_BATCH=720
 TOP_K_SIMILARITIES=3
+
+PERFORM_CLUSTERING=false
+K_CLUSTERS=3
+MAX_ITERATIONS=100
+SHOW_ONLY_SPEECH_IDS=TRUE
+
 BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
 NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
-CSV_TO_READ=biG
+CSV_TO_READ=normal
+
 DB_URL=jdbc:sqlite:information_retrieval.db
