provide final config

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,27 +1,27 @@
-DROP_AND_RECREATE_TABLES=false
+DROP_AND_RECREATE_TABLES=TRUE
 EXECUTE_BATCH_AFTER=125000
 
-SEARCH=false
+SEARCH=TRUE
 SEARCH_TOP_K=20
 
-EXTRACT_KEY_WORDS=true
-EXTRACT_MEMBER_KEY_WORDS=false
-EXTRACT_POLITICAL_PARTY_KEY_WORDS=false
-EXTRACT_SPEECH_KEY_WORDS=true
+EXTRACT_KEY_WORDS=TRUE
+EXTRACT_MEMBER_KEY_WORDS=TRUE
+EXTRACT_POLITICAL_PARTY_KEY_WORDS=TRUE
+EXTRACT_SPEECH_KEY_WORDS=TRUE
 
 NUMBER_OF_KEY_WORDS= 3
-FIND_SIMILARITIES=false
-FIND_SIMILARITIES_IN_BATCHES=false
+FIND_SIMILARITIES=TRUE
+FIND_SIMILARITIES_IN_BATCHES=FALSE
 SIMILARITY_BATCH=720
 TOP_K_SIMILARITIES=3
 
-PERFORM_CLUSTERING=false
+PERFORM_CLUSTERING=TRUE
 K_CLUSTERS=3
 MAX_ITERATIONS=100
-SHOW_ONLY_SPEECH_IDS=TRUE
+SHOW_ONLY_SPEECH_IDS=FALSE
 
-BIG_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings_1989_2020.csv
-NORMAL_CSV_PATH=src/main/resources/Greek_Parliament_Proceedings.csv
-CSV_TO_READ=normal
+BIG_CSV_PATH=SRC/MAIN/RESOURCES/GREEK_PARLIAMENT_PROCEEDINGS_1989_2020.CSV
+NORMAL_CSV_PATH=SRC/MAIN/RESOURCES/GREEK_PARLIAMENT_PROCEEDINGS.CSV
+CSV_TO_READ=NORMAL
 
-DB_URL=jdbc:sqlite:information_retrieval.db
+DB_URL=JDBC:SQLITE:INFORMATION_RETRIEVAL.DB
